--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul class="nav">
+            <li class="nav-item nav-inicio"><a href="#">Inicio</a></li>
+            <li class="nav-item nav-servicios"><a href="#">Servicios</a></li>
+            <li class="nav-item nav-descargas "><a href="#">Descargas</a></li>
+            <li class="nav-item nav-qs"><a href="#">Quienes Somos</a></li>
+        </ul>
+    </nav>
+
+    <div class="container">
+        <div class="login-container">
+            <h1 class="login-title">
+                Iniciar sesión
+            </h1>
+
+            <form class="login-frm" action="login">
+                
+                <label for="usuario" class="lbl">Usuario</label>
+                <input id="usuario" type="text" class="txt-control" placeholder="Nombre de usuario">
+
+                <label for="password" class="lbl">Usuario</label>
+                <input id="password" type="text" class="txt-control" placeholder="Nombre de usuario">
+
+                <input type="submit" class="btn-login">
+
+            </form>
+        </div>
+    </div>
     
 </body>
 </html>
